@@ -16,8 +16,9 @@ my $RPSCRIPT = "25unburden-home-dir-xdg";
 
 my ($cmd, $wanted, $output, $stderr);
 
-# Set a debug environment
-$ENV{PATH} = "$BINDIR:/bin"; # /bin needed for sed
+# Set a debug environment: /bin needed for sed, /usr/bin for run-parts
+# thanks to braindead usrmerge.
+$ENV{PATH} = "$BINDIR:/bin:/usr/bin";
 $ENV{UNBURDEN_BASENAME} = $t->BASENAME;
 delete $ENV{XDG_CACHE_HOME};
 
@@ -36,17 +37,17 @@ ok( $t->write_file($t->HOME.'/.'.$t->BASENAME,
                "FILELAYOUT=".$t->TARGET."/%s\nUNBURDEN_HOME=yes\nTARGETDIR=.\n"),
     "Configure Xsession.d script to run unburden-home-dir" );
 
-$t->call_cmd("/bin/run-parts --list $XSESSIOND");
+$t->call_cmd("run-parts --list $XSESSIOND");
 $t->eq_or_diff_stderr('', "run-parts STDERR");
 $t->eq_or_diff_stdout("$XSESSIOND/$RPSCRIPT\n", "run-parts STDOUT");
 
-$t->call_cmd("/bin/sh -c '. $XSESSIOND/$RPSCRIPT; echo \$XDG_CACHE_HOME'");
+$t->call_cmd("sh -c '. $XSESSIOND/$RPSCRIPT; echo \$XDG_CACHE_HOME'");
 $t->eq_or_diff_stderr('', "Xsession.d STDERR is empty");
 $t->eq_or_diff_stdout('./'.$t->TARGET."/cache\n", "XDG_CACHE_HOME is set");
 
 ok( $t->write_file($t->HOME.'/.'.$t->BASENAME, "UNBURDEN_HOME=no\nTARGETDIR=.\n"), "Configure Xsession.d script to NOT run unburden-home-dir" );
 
-$t->call_cmd("/bin/sh -c '. $XSESSIOND/$RPSCRIPT; echo \$XDG_CACHE_HOME'");
+$t->call_cmd("sh -c '. $XSESSIOND/$RPSCRIPT; echo \$XDG_CACHE_HOME'");
 $t->eq_or_diff_stderr('', "Xsession.d STDERR is empty");
 $t->eq_or_diff_stdout('', "XDG_CACHE_HOME is not set");
 
